--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9"
   }
 }
