Hecho Todo Ya, descarga de assets

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 DB_URL = mongodb+srv://ojhb1:LIEtZl4HrWlkFAZw@cluster0.3wxjrmq.mongodb.net/ua?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5000
 JWTSECRET=82i44Ç$$$&jsjsJKS23rkfsdbvksldWEDEVFG
+cloud_name=dvx0hczgp
+api_key=545268452715975
+api_secret=or2_St2NswY3ecsjkODe3RmVN8Y
